--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.17.3",
+    "i": "^0.3.7",
+    "lucide-react": "^0.515.0",
+    "next": "15.3.3",
+    "nextjs-toploader": "^3.8.16",
+    "npm": "^11.4.2",
+    "rc-slider": "^10.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "react-range-slider-input": "^3.2.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
